# rss-reader-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.circleci/: config.yml
docker/develop/: .env  entrypoint.sh  scheduler-entrypoint.sh  worker-entrypoint.sh
docker/develop/postgres/: init-user-db.sh
rss_reader/: manage.py  mypy.ini
rss_reader/feeds/: models.py  tasks.py
rss_reader/feeds/api/v1/: constants.py  serializers.py  urls.py  views.py
rss_reader/feeds/migrations/: 0001_initial.py  0002_add_relationship.py
rss_reader/lib/: feed_utils.py  user_utils.py  utils.py
rss_reader/rss_reader/: settings.py  urls.py
rss_reader/rss_reader/celery/: __init__.py  celery.py
rss_reader/static/: schema.json
rss_reader/static_root/: schema.json
rss_reader/templates/: documentation-ui.html
rss_reader/users/: models.py
rss_reader/users/api/v1/: serializers.py  urls.py  utils.py  views.py
rss_reader/users/migrations/: 0001_initial.py
rss_reader/utilities/: models.py
tests/python/feeds/: test_tasks.py
tests/python/feeds/apis/: test_views.py
tests/python/users/api/: test_views.py
